feat: uicolor theming

--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Package: com.catppuccin.ios
 Name: catppuccin
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Soothing pastel theme for iOS
 Maintainer: r58Playz
 Author: r58Playz
 Section: Tweaks
