--- a/prefs/Resources/Root.plist
+++ b/prefs/Resources/Root.plist
@@ -90,6 +90,26 @@
 			<key>PostNotification</key>
 			<string>com.catppuccin.ios.prefs/reload</string>
 		</dict>
+        <dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Integrations</string>
+		</dict>
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>label</key>
+            <string>YouTube</string>
+            <key>default</key>
+            <false />
+            <key>defaults</key>
+            <string>com.catppuccin.ios.prefs</string>
+            <key>key</key>
+            <string>integration_youtube</string>
+            <key>PostNotification</key>
+            <string>com.catppuccin.ios.prefs/reload</string>
+        </dict>
 	</array>
 	<key>title</key>
 	<string>Catppuccin</string>
