--- a/prefs/Resources/Root.plist
+++ b/prefs/Resources/Root.plist
@@ -91,6 +91,26 @@
 			<string>com.catppuccin.ios.prefs/reload</string>
 		</dict>
         <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Tweaks</string>
+        </dict>
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>label</key>
+            <string>Replace blue with accent</string>
+            <key>default</key>
+            <false />
+            <key>defaults</key>
+            <string>com.catppuccin.ios.prefs</string>
+            <key>key</key>
+            <string>tweak_blue_is_accent</string>
+            <key>PostNotification</key>
+            <string>com.catppuccin.ios.prefs/reload</string>
+        </dict>
+        <dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
