add github and improve youtube

--- a/catppuccin.plist
+++ b/catppuccin.plist
@@ -2,7 +2,8 @@
     Filter = {
         Bundles = (
             "com.apple.UIKit",
-            "com.google.ios.youtube"
+            "com.google.ios.youtube",
+            "com.github.stormbreaker.prod"
         );
     };
 }
