--- a/prefs/Resources/Root.plist
+++ b/prefs/Resources/Root.plist
@@ -130,6 +130,20 @@
             <key>PostNotification</key>
             <string>com.catppuccin.ios.prefs/reload</string>
         </dict>
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>label</key>
+            <string>GitHub</string>
+            <key>default</key>
+            <false />
+            <key>defaults</key>
+            <string>com.catppuccin.ios.prefs</string>
+            <key>key</key>
+            <string>integration_github</string>
+            <key>PostNotification</key>
+            <string>com.catppuccin.ios.prefs/reload</string>
+        </dict>
 	</array>
 	<key>title</key>
 	<string>Catppuccin</string>
